--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,8 @@ on:
     branches:
        - master
 jobs:
-  name: checkout-repo
-  steps:
+  checkout-repo:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v1
 
