--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,6 +2,8 @@ name: Zap-scanning
 
 on:
   push:
+    paths:
+    - 'postman-collection/**'
 
 jobs:
   checkout-repo:
@@ -10,22 +12,5 @@ jobs:
     - name: Checkout 🛎️
       uses: actions/checkout@v2
     - name : checking for existing container
-      run : docker ps
-    - name: Installing Zap
-      run :  docker run  --rm -d -u zap -p 8080:8080 -i owasp/zap2docker-stable zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config api.key=12345
-    - name: Installing newman
-      run: |
-        sudo npm install -g newman
-        sleep 10
-        docker ps
-        HTTP_PROXY=http://localhost:8080/ newman run test-collection.json  --insecure
-      working-directory: postman-collection 
-    - name: Checking result
-      run: |
-       pip install --user requests 
-       docker ps
-       python url.py
-       sleep 20
-       python result.py
-       python exit_code.py
-      working-directory: python-scripts
+      run : echo "Hello"
+           
