--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,11 +10,13 @@ jobs:
     - name: Checkout 🛎️
       uses: actions/checkout@v2
     - name : checking for existing container
-      run : echo "Hello" > test && exit 1
+      run : echo "Hello" > test 
     
     - uses: actions/upload-artifact@v1
       with:
         name: result
         path: ${{ github.workspace }}/test
       name: 'Upload Package'
+    - name : fail build
+      run : exit 1
            
